@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <tool-setup>
  <required tool_id="MailHost"
-           class="Products.SecureMailHost.SecureMailHost.SecureMailHost"/>
+           class="Products.MailHost.MailHost.MailHost"/>
  <required tool_id="caching_policy_manager"
            class="Products.CMFCore.CachingPolicyManager.CachingPolicyManager"/>
  <required tool_id="content_type_registry"
