@@ -64,7 +64,6 @@ setup(name='Plone',
           'Products.PluginRegistry',
           'Products.PortalTransforms',
           'Products.ResourceRegistries',
-          'Products.SecureMailHost',
           'Products.statusmessages',
           'archetypes.kss',
           'borg.localrole',
